# proto-vpn

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml
docs/: rotation-strategy.md  subscription-format.md
scripts/: deploy.sh  run.sh  sign_subscription.py
src/proto/: bundle.py  rotation.py  subscription.py
src/proto/composer/: config_builder.py  routes.py  runner.py  settings.py
tests/: test_bundle.py  test_config_builder_branches.py  test_config_builder_cdn_host.py  test_config_builder_ech.py  test_config_builder_grpc_service_name.py  test_config_builder_hy2_obfs.py  test_config_builder_listen_port.py  test_config_builder_reality_defaults.py  test_config_builder_reality_handshake.py  test_config_builder_ss_vmess.py  test_config_builder_tls_disabled.py  test_config_builder_tls_server_name.py  test_config_builder_utls_fingerprint.py  test_config_builder_ws_path.py  test_rotation.py  test_routes_basic.py  test_routes_traversal_400.py  test_runner_coverage_gaps.py  test_runner_mocked.py  test_runner_pure.py  test_runner_start_run.py  test_subscription.py
web/: composer.html
web/css/: composer.css
web/js/: composer.js  lab-client.js
